# ChangeLog for www-client/uget
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/uget/ChangeLog,v 1.3 2010/01/06 12:53:09 wired Exp $

*uget-9999 (06 Jan 2010)

  06 Jan 2010; Alex Alexander <wired@gentoo.org> +uget-9999.ebuild:
  added live ebuild

*uget-1.5.0.1 (06 Jan 2010)

  06 Jan 2010; Alex Alexander <wired@gentoo.org> +uget-1.5.0.1.ebuild:
  version bump

*uget-1.5.0 (08 Dec 2009)

  08 Dec 2009; Alex Alexander <wired@gentoo.org> +uget-1.5.0.ebuild,
  +metadata.xml:
  ebuild for uget - new version of urlgfe - renamed by upstream
