@@ -1,7 +1,8 @@
 DIST uget-1.5.0.1.tar.gz 307319 RMD160 601316337f249e8d0ab7c38cba4f606a50371b5d SHA1 d6c1399e2e6ba4a1468cd59421a5f1e8b20a415f SHA256 efdb5194e7c88fc4ecd49457a2f6a2ab0931ffafd4f7ced5214e18d363626bc1
 DIST uget-1.5.0.tar.gz 308820 RMD160 f5f8fd615603ab50d0dbde78efd3ce2c03005def SHA1 90250b3690ec28f43d96fb2d77924b4cc1d5a1bf SHA256 d90ce905c1e399d998b1432372547574dc22484fbe07365c5546a00293ac5fc0
+EBUILD uget-1.5.0.1-r1.ebuild 1008 RMD160 6bad8b24f4c1e586570c958680b3c59b4952bc2f SHA1 51949f1efd5722f4ef2d66e9456a3cab2dd5b892 SHA256 d88f77a0e537ab202510a8a7d99dfb9e24defd3f9a2a3a43248be654c691e34d
 EBUILD uget-1.5.0.1.ebuild 842 RMD160 1aa62537fa63b9fcce0d87b4055ec830900091d8 SHA1 5693ed5cd836bb11f51202088438f94d6169a5e7 SHA256 de7d4c2037dfc8183234365b688ee1c6fa625ee765b46c1a0f6f75f717d20899
 EBUILD uget-1.5.0.ebuild 840 RMD160 d53e1bb371922262c5b5d584450a2eec3edcaaa0 SHA1 f26bb68ab54a7b7e5a64b6b946fcfac7b3b418ad SHA256 2f71300058f424ff2539f271a35c33fec515079916ebd0a5737f2ee3f89b1d88
 EBUILD uget-9999.ebuild 1076 RMD160 47669133155180a0c76ee8dcd77561229d29e305 SHA1 88ae3bee9b8225d91cb8c3c5ea63f19eb12640a4 SHA256 72c03568b7c835212a849301606ba1fb89693977e39bd561f4054431dccd435c
-MISC ChangeLog 611 RMD160 d472410b3d89e253cac46ee2cb5c06af68cc0409 SHA1 c514aa1fc90dfe0fb324428ff28f4eedeab9ff94 SHA256 0c3e8ac6f6f01df951f49977ecde670134f8e00baa30480c5c5bc8e717c0d9fc
+MISC ChangeLog 779 RMD160 21e71e5cfcd3d0300b7da5ef5f4ed1bb5075162d SHA1 1db2f82d6e94b348525404ff39eead25f24d96b5 SHA256 8967554214cef5a8c9457369a5fd4d10a18e1bd1fdbbcd17f6cb7c08e1a9986e
 MISC metadata.xml 530 RMD160 4ce88c310853fdd6a80576b298503bec3cd7b8fa SHA1 32ea5d13dfa13801a21bab7292e7d111d53e5806 SHA256 7beb35a6094993cf08da4a10449e03603ca5dd5add8df8e250054c29f088705a
