@@ -1,0 +1,41 @@
+# Copyright 1999-2010 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/www-client/uget/uget-1.5.0.1-r1.ebuild,v 1.1 2010/01/08 15:23:05 wired Exp $
+
+EAPI="2"
+
+DESCRIPTION="Download manager using gtk+ and libcurl"
+HOMEPAGE="http://urlget.sourceforge.net/"
+SRC_URI="mirror://sourceforge/urlget/${P}.tar.gz"
+
+LICENSE="LGPL-2.1"
+SLOT="0"
+KEYWORDS="~amd64 ~ppc ~x86"
+IUSE="gstreamer libnotify nls"
+
+RDEPEND="
+	dev-libs/libpcre
+	>=dev-libs/glib-2
+	>=net-misc/curl-7.10
+	>=x11-libs/gtk+-2.4
+	gstreamer? ( media-libs/gstreamer )
+	libnotify? ( x11-libs/libnotify )
+	"
+DEPEND="${RDEPEND}
+	dev-util/pkgconfig
+	sys-devel/gettext"
+
+src_configure() {
+	econf $(use_enable nls) \
+		  $(use_enable gstreamer) \
+		  $(use_enable libnotify notify) || die "econf failed"
+}
+
+src_compile() {
+	emake || die "emake failed"
+}
+
+src_install() {
+	make DESTDIR="${D}" install || die "make install failed"
+	dodoc AUTHORS ChangeLog NEWS README || die "dodoc failed"
+}
