@@ -1,6 +1,11 @@
 # ChangeLog for www-client/uget
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/uget/ChangeLog,v 1.3 2010/01/06 12:53:09 wired Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/uget/ChangeLog,v 1.4 2010/01/08 15:23:05 wired Exp $
+
+*uget-1.5.0.1-r1 (08 Jan 2010)
+
+  08 Jan 2010; Alex Alexander <wired@gentoo.org> +uget-1.5.0.1-r1.ebuild:
+  added gstreamer and libnotify USE flags, fixed bug #300157
 
 *uget-9999 (06 Jan 2010)
 
